Segfault when running sharding dbtest

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.2
    • Affects Version/s: 3.1.1
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Hide

      ./dbtest sharding

      Show
      ./dbtest sharding
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The sharding suite passes when all dbtest suites are run, so it seems likely this was being masked by the order in which suites execute.

      Program received signal SIGSEGV, Segmentation fault.
      0x0000000001de676d in mongo::CatalogManager::update (this=0x0, ns=..., query=..., update=..., upsert=true, multi=false, response=0x7fffffffc880)
          at src/mongo/s/catalog/catalog_manager.cpp:128
      128             writeConfigServerDirect(request, response);
      (gdb) bt
      #0  0x0000000001de676d in mongo::CatalogManager::update (this=0x0, ns=..., query=..., update=..., upsert=true, multi=false, response=0x7fffffffc880)
          at src/mongo/s/catalog/catalog_manager.cpp:128
      #1  0x0000000001e04093 in mongo::ChunkManager::createFirstChunks (this=0x7fffffffd5f0, config=..., primary=..., initPoints=0x0, initShards=0x0)
          at src/mongo/s/chunk_manager.cpp:447
      #2  0x00000000017541e8 in ShardingTests::ChunkManagerCreateBasicTest::run (this=0x7fffffffd7c0) at src/mongo/dbtests/sharding.cpp:172
      #3  0x000000000176000b in mongo::unittest::Suite::runTestObject<ShardingTests::ChunkManagerCreateBasicTest> () at src/mongo/unittest/unittest.h:381
      #4  0x0000000001410a4a in std::_Function_handler<void (), void (*)()>::_M_invoke(std::_Any_data const&) (__functor=...) at /usr/include/c++/4.8/functional:2071
      #5  0x0000000001c6ecbc in std::function<void ()>::operator()() const (this=0x7ffff5b5b988) at /usr/include/c++/4.8/functional:2464
      #6  0x0000000001f4050a in mongo::unittest::TestHolder::run (this=0x7ffff5b5b980) at src/mongo/unittest/unittest.h:251
      #7  0x0000000001f3e7ea in mongo::unittest::Suite::run (this=0x7ffff7f40960, filter=..., runsPerTest=1) at src/mongo/unittest/unittest.cpp:230
      #8  0x0000000001f3f166 in mongo::unittest::Suite::run (suites=..., filter=..., runsPerTest=1) at src/mongo/unittest/unittest.cpp:295
      #9  0x0000000001dbb94f in mongo::dbtests::runDbTests (argc=2, argv=0x7fffffffe138) at src/mongo/dbtests/framework.cpp:128
      #10 0x0000000001453af9 in dbtestsMain (argc=2, argv=0x7fffffffe138, envp=0x7fffffffe150) at src/mongo/dbtests/dbtests.cpp:116
      #11 0x0000000001453bac in main (argc=2, argv=0x7fffffffe138, envp=0x7fffffffe150) at src/mongo/dbtests/dbtests.cpp:132
      

            Assignee:
            Kaloian Manassiev
            Reporter:
            Max Hirschhorn
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: