SERVER-17946 Initialize sharding state in dbtest

This allows individual sharding suites to be run in isolation instead of
having to run everything.